--- a/styles/historia.css
+++ b/styles/historia.css
@@ -8,13 +8,15 @@
 }
 
 p,
-h3 {
+h3,
+h1 {
     text-align: justify;
-    filter: drop-shadow(2px 2px 2px black);
+    filter: drop-shadow(4px 4px 2px black);
 }
 
-h1 {
-    filter: drop-shadow(4px 4px 4px black);
+p {
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 div,
@@ -25,7 +27,7 @@ button {
 
 button {
     text-align: center;
-    filter: drop-shadow(2px 2px 2px black);
+    filter: drop-shadow(4px 4px 2px black)
 }
 
 .botoesHistoria,
@@ -75,58 +77,10 @@ button {
     margin-left: auto;
     margin-right: auto;
     transition: all 0.5s ease-in-out;
+    border-radius: 10px;
+    filter: drop-shadow(4px 4px 2px black);
 }
 
 .imagemHistoria:hover {
     transform: scale(1.3);
-    z-index: 10;
-    box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.8);
-}
-
-/* Efeito Ripple */
-
-.ripple {
-    position: relative;
-    overflow: hidden;
-    transform: translate3d(0, 0, 0);
-}
-
-.ripple:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    background-image: radial-gradient(circle, white 10%, transparent 10%);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    transform: scale(7, 7);
-    opacity: 0;
-    transition: transform .5s, opacity 1s;
-}
-
-.ripple:active:after {
-    transform: scale(0, 0);
-    opacity: .3;
-    transition: 0s;
-}
-
-/* Efeito Fading */
-
-.slidesDiv-fading {
-    animation: fading 0.5s ease-in-out;
-    animation-fill-mode: forwards;
-}
-
-@keyframes fading {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
 }
