--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,7 @@ body {
 
 .sidebar,
 .content {
+    display: table-cell;
     vertical-align: top;
 }
 
@@ -46,7 +47,6 @@ body {
 /* Conteúdo */
 
 .content {
-    display: table-cell;
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgba(0, 0, 0, 0.4));
     width: 90%;
     padding: 10px 0 0 30px;
@@ -55,10 +55,8 @@ body {
 /* Menu Lateral */
 
 .sidebar {
-    display: table-cell;
     background-image: linear-gradient(to left, rgba(255, 0, 0, 0), rgba(0, 0, 0, 0.4));
     width: 15%;
-    vertical-align: top;
 }
 
 .sidebar a {
@@ -68,15 +66,61 @@ body {
     color: white;
     font-size: 2vw;
     text-decoration: none;
-    filter: drop-shadow(4px 4px 4px black);
+    filter: drop-shadow(4px 4px 2px black);
     transition: all 0.3s ease-in-out;
-}
-
-.sidebar a:active {
-    transform: rotate(360)
 }
 
 .sidebar a:hover:not(.active) {
     transform: scale(1.3);
     transform-origin: top left;
+}
+
+/* Efeitos Compartilhados */
+
+/* Efeito Ripple */
+
+.ripple {
+    position: relative;
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
+}
+
+.ripple:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    background-image: radial-gradient(circle, white 10%, transparent 10%);
+    background-repeat: no-repeat;
+    background-position: 50%;
+    transform: scale(7, 7);
+    opacity: 0;
+    transition: transform 0.5s, opacity 1s;
+}
+
+.ripple:active:after {
+    transform: scale(0, 0);
+    opacity: .3;
+    transition: 0s;
+}
+
+/* Efeito Fading */
+
+.slidesDiv-fading {
+    animation: fading 0.5s ease-in-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fading {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
