--- a/styles/historia.css
+++ b/styles/historia.css
@@ -59,6 +59,11 @@ button {
     cursor: pointer;
     font-size: larger;
     outline: none;
+    transition: all 0.3s ease-in-out;
+}
+
+.botoesHistoria button:hover {
+    transform: scale(1.3);
 }
 
 /* Parágrafos */
@@ -74,6 +79,7 @@ button {
 .imagemHistoria {
     display: block;
     width: 50%;
+    margin-top: 3%;
     margin-left: auto;
     margin-right: auto;
     transition: all 0.5s ease-in-out;
