--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,7 @@ body {
 }
 
 p,
+h4,
 h3,
 h2,
 h1 {
@@ -146,7 +147,8 @@ p {
 /* Formatação das Imagens */
 
 .imagemHistoria,
-.imagemMundos {
+.imagemMundos,
+.imagemSobre {
     display: block;
     width: 50%;
     margin-left: auto;
@@ -156,17 +158,20 @@ p {
     transition: all 0.3s ease-in-out;
 }
 
-.imagemHistoria {
-    margin-bottom: 2%;
+.imagemHistoria,
+.imagemSobre {
+    margin-top: 3%;
 }
 
-.imagemMundos {
-    margin-top: 2%;
+.imagemMundos,
+.imagemSobre {
+    margin-bottom: 3%;
 }
 
 .imagemHistoria:hover,
-.imagemMundos:hover {
-    transform: scale(1.3);
+.imagemMundos:hover,
+.imagemSobre:hover {
+    transform: scale(1.1);
 }
 
 /* Página Personagens */
