--- a/styles/main.css
+++ b/styles/main.css
@@ -219,12 +219,6 @@ p {
 
 /* Informações dos Personagens */
 
-.personagem {
-    display: table;
-    width: 100%;
-    height: 100%;
-}
-
 .imagemPersonagem,
 .descricaoPersonagem {
     display: table-cell;
@@ -233,7 +227,7 @@ p {
 
 .imagemPersonagem {
     width: 400px;
-    height: 490px;
+    height: 485px;
 }
 
 .imagem {
@@ -257,7 +251,7 @@ p {
 
 /* Efeito Fading */
 
-.slidesDiv-fading {
+.divsFading {
     animation: fading 0.6s ease-in-out;
     animation-fill-mode: forwards;
 }
